// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
[
  <ul
    className="css-ckmwo8-TabsContainerStyle ercic662"
  >
    <li
      className="is-active css-1vt6dm1-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      ALL
    </li>
    <li
      className=" css-1vt6dm1-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      GET BUILDING
    </li>
    <li
      className=" css-1vt6dm1-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      PREREQUISITES
    </li>
    <li
      className=" css-1vt6dm1-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      FEATURES
    </li>
  </ul>,
  <div
    className="css-18difvw-SelectWrapper ercic660"
  >
    <div
      className=" css-14mys1s-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-13gegmk-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-9elhwp-ValueContainer"
        >
          <div
            className=" css-1n4ahi-singleValue"
          >
            ALL
          </div>
          <input
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-2-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            className=" css-1uei4ir-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            className=" css-1ra8hvv-indicatorContainer"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <img
              alt=""
              className=" css-vfym8x-StyledDefaultDropdownIcon evf7wlc2"
              src="test-image-stub"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`sidebar 1`] = `
[
  <ul
    className="sidebar css-ckmwo8-TabsContainerStyle ercic662"
  >
    <li
      className="sidebar is-active css-1vt6dm1-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      ALL
    </li>
    <li
      className="sidebar css-1vt6dm1-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      GET BUILDING
    </li>
    <li
      className="sidebar css-1vt6dm1-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      PREREQUISITES
    </li>
    <li
      className="sidebar css-1vt6dm1-TabStyle ercic661"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      FEATURES
    </li>
  </ul>,
  <div
    className="sidebar css-18difvw-SelectWrapper ercic660"
  >
    <div
      className=" css-14mys1s-container"
      onKeyDown={[Function]}
    >
      <span
        className="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        className="css-1f43avz-a11yText-A11yText"
      />
      <div
        className=" css-13gegmk-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-9elhwp-ValueContainer"
        >
          <div
            className=" css-1n4ahi-singleValue"
          >
            ALL
          </div>
          <input
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={true}
            aria-readonly={true}
            className="css-mohuvp-dummyInput-DummyInput"
            disabled={false}
            id="react-select-3-input"
            inputMode="none"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            role="combobox"
            tabIndex={0}
            value=""
          />
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            className=" css-1uei4ir-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            className=" css-1ra8hvv-indicatorContainer"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <img
              alt=""
              className=" css-vfym8x-StyledDefaultDropdownIcon evf7wlc2"
              src="test-image-stub"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
